--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ body {
   background-color: var(--pressed-state);
 }
 
-  .customers {
+.customers {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -321,12 +321,11 @@ body {
   border-radius: 4px;
   color: #8e8f99;
   fill: currentColor;
-  outline: var(--outline);
 }
 
 .customers-item :hover,
 .customers-item :focus {
-  border-color: #404bbf;
+  border-color: 1px solid #404bbf;
   color: #404bbf;
 }
 /* --footer-- */
@@ -338,7 +337,6 @@ body {
 .footer-container {
   display: flex;
   align-items: baseline;
-  gap: 120px;
 }
 .footer-container-logo {
   margin-right: 120px;
@@ -372,23 +370,23 @@ body {
   height: 40px;
 }
 .footer-item {
-  width: 100%;
-  height: 100%;
-  background-color: var(--primary-brand);
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--primary-brand);
+  
 }
-.footer-item :hover,
-.footer-item :focus {
+.footer-list :hover,
+.footer-list :focus {
   background-color: #31d0aa;
 }
 .footer-icon {
   fill: #f4f4fd;
 }
-/* --p
-age portfolio-- */
+/* --page portfolio-- */
 /* --filter-- */
 .portfolio {
   padding-top: 96px;
@@ -418,11 +416,10 @@ age portfolio-- */
   text-align: center;
   color: var(--primary-brand, #4d5ae5);
 }
-.button-filter:hover,
-.button-filter:focus {
+.button-filter :hover,
+.button-filter :focus {
   background: var(--pressed-state, #404bbf);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);  
   border: 1px solid transparent;
   color: var(--white-background, #ffffff);
   cursor: pointer;
@@ -438,10 +435,11 @@ age portfolio-- */
 }
 .portfolio-item {
   display: block;
-  }
-.button-filter:hover,
-.button-filter:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.button-filter :hover,
+.button-filter :focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-card {
   outline: var(--outline);
@@ -449,14 +447,6 @@ age portfolio-- */
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-/* 
-.porfolio-menu div :nth-child(3n) {
-  margin-right: 0px;
-}
-.porfolio-menu div :nth-last-child(-n + 3) {
-  padding-bottom: 120px;
-}
-*/
 .subtitle-card {
   margin-bottom: 8px;
 }
