--- a/css/styles.css
+++ b/css/styles.css
@@ -323,9 +323,9 @@ body {
   fill: currentColor;
 }
 
-.customers-item :hover,
-.customers-item :focus {
-  border-color: 1px solid #404bbf;
+.customers-list :hover,
+.customers-list :focus {
+  border-color: #404bbf;
   color: #404bbf;
 }
 /* --footer-- */
