--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,8 @@ body {
 }
 /* --hero-- */
 .hero-container {
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
@@ -192,7 +193,6 @@ body {
   height: 112px;
   background-color: #f4f4fd;
   border-radius: 4px;
-  cursor: pointer;
 }
 .list-advantages {
   width: calc((100% - 72px) / 4);
@@ -274,8 +274,6 @@ body {
 .team-card-list {
   width: 40px;
   height: 40px;
-
-  /* outline: var(--outline); */
 }
 .team-card-item {
   display: flex;
@@ -322,7 +320,6 @@ body {
   color: #8e8f99;
   fill: currentColor;
 }
-
 .customers-item:hover,
 .customers-item:focus {
   border-color: #404bbf;
@@ -416,7 +413,7 @@ body {
 .button-filter:hover ,
 .button-filter:focus {
   background: var(--pressed-state, #404bbf);
-  border: 1px solid transparent #e7e9fc;;
+  border: 1px #e7e9fc;
   color: var(--white-background, #ffffff);
   cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
